--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ body {
 @media screen and (max-width: 767px) {
     .flower {
         zoom: 1.5;
-          margin-bottom: 4rem;
+          margin-bottom: 30px;
     }
     .message {
         position: absolute; /* Entfernt die feste Positionierung */
